k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
spec:
  selector:
    app: conduit
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conduit
  template:
    metadata:
      labels:
        app: conduit
    spec:
      containers:
      - name: conduit
        image: conduit-server:latest
        command: ["./conduit"]
        args: ["-conf", "configs/conduit/config.yaml"]
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: conduit-admin
spec:
  type: NodePort
  selector:
    app: conduit-admin
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conduit-admin
  template:
    metadata:
      labels:
        app: conduit-admin
    spec:
      containers:
      - name: conduit-admin
        image: conduit-server:latest
        command: ["./conduit-admin"]
        args: ["-conf", "configs/conduit-admin/config.yaml"]
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: admin-web
spec:
  selector:
    app: admin-web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-web
  template:
    metadata:
      labels:
        app: admin-web
    spec:
      containers:
      - name: admin-web
        image: admin-web:latest
        ports:
        - containerPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conduit-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://admin.mochixxx.cc"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: www.mochixxx.cc
    http:
      paths:
      - path: /admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: conduit-admin
            port:
              number: 3000
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: conduit
            port:
              number: 8000
  - host: admin.mochixxx.cc
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin-web
            port:
              number: 80
